updated code for engine -v 4.25

--- a/UIAIAvatar.uplugin
+++ b/UIAIAvatar.uplugin
@@ -16,7 +16,7 @@
   "Modules": [
     {
       "Name": "UIAIAvatar",
-      "Type": "Developer",
+      "Type": "DeveloperTool",
       "LoadingPhase": "Default",
       "AdditionalDependencies": [
         "UROSBridge"
